tests/wpt/tests/third_party/test262/test/language/module-code/parse-err-decl-pos-import-block-stmt-list.js
// Copyright (C) 2016 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

{ void 0; import v from './decl-pos-import-block-stmt-list.js'; }
